package Model;

public class Castle implements Positionable{
}
