package Model;

public interface GameStrategy {
}
