package Model;

public class King
{
    public KingColor color;
    public King(KingColor color)
    {
        color = color;
    }
}
