@startuml
skinparam style strictuml
skinparam classAttributeIconSize 0
skinparam classFontStyle Bold
hide enum methods


class Main{
}



package models{

    class GameBoard{

    }

    class King{
        -color:
    }

    class Player{

    }

    class Board{
        -x:Integer
        -y:Integer
        -isPossible:Boolean
    }

    class Ground{
        -crown:Integer
    }


    interface Positionable <<interface>>{
    }

    class Castle implements Positionable{
    }

    class Tile implements Positionable{
        -right:Ground
        -left:Ground
        -number:Integer
    }


    enum Color{
        YELLOW
        DARK GREEN
        LIGHT GREEN
        BLUE
        BROWN
        BLACK
    }


    interface GameStrategy <<interface>>{
        +nextRound()
    }

    class GameBasic implements GameStrategy{
        +nextRound()
    }

    class Dynastie extends GameBasic implements GameStrategy{

    }
    class MiddleKingdom extends GameBasic implements GameStrategy{

    }
    class Harmony extends GameBasic implements GameStrategy{

    }

}

Ground *-> Color : "-"

Board "-tiles\n..*"  *-->  Tile : has >
Player *--> King : "-kings\n1..2"
Player "-board\n1" *-> Board : has >
Tile *--> Ground :  "-left\n1\n-right\n1"



interface Variant{

}

class Variant1 implements Variant{
}


package Controller{

}


package View{

}



@enduml